--- a/.computenest/ros_templates/template.yaml
+++ b/.computenest/ros_templates/template.yaml
@@ -125,7 +125,7 @@ Resources:
       VpcId:
         Ref: VpcId
       SecurityGroupIngress:
-        - PortRange: 80/80
+        - PortRange: 22/22
           Priority: 1
           SourceCidrIp: 0.0.0.0/0
           IpProtocol: tcp
@@ -148,7 +148,7 @@ Resources:
         Ref: ZoneId
       SecurityGroupId:
         Ref: SecurityGroup
-      ImageId: centos_7_9_x64_20G_alibase_20240403.vhd
+      ImageId: aliyun_3_x64_20G_alibase_20240528.vhd
       Password:
         Ref: InstancePassword
       InstanceType:
@@ -171,40 +171,6 @@ Resources:
       CommandContent:
         Fn::Sub:
           - |
-            yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
-            yum makecache fast
-            yum -y install docker-ce jq
-            mkdir -p /etc/docker
-            tee /etc/docker/daemon.json <<-'EOF'
-            {
-                "registry-mirrors": [
-                    "https://docker.m.daocloud.io",
-                    "https://mirror.baidubce.com",
-                    "https://dockerproxy.com",
-                    "https://mirror.iscas.ac.cn",
-                    "https://huecker.io",
-                    "https://dockerhub.timeweb.cloud",
-                    "https://noohub.ru",
-                    "https://vlgh0kqj.mirror.aliyuncs.com"
-                ]
-            }
-            EOF
-            systemctl enable docker
-            systemctl start docker
-            sleep 10
-
-            dockerJson='{{ computenest::acr::dockerconfigjson }}'
-            decodeDockerJson=$(echo $dockerJson | base64 -d)
-            host=$(echo $decodeDockerJson | jq '.auths' | jq 'keys' | jq .[0])
-            username=$(echo $decodeDockerJson | jq ".auths.$host.username" | tr -d '"')
-            password=$(echo $decodeDockerJson | jq ".auths.$host.password" | tr -d '"')
-            host=$(echo $host | tr -d '"')
-            docker login $host --username=$username --password=$password
-
-            mkdir -p /home/admin/application
-            wget '{{ computenest::file::aliyun-computenest_quickstart-chatgpt-on-wechat-docker-compose }}' -O /home/admin/application/docker_compose.tar
-            tar -xvf /home/admin/application/docker_compose.tar -C /home/admin/application
-
             cat > /etc/systemd/system/docker-compose-app.service <<EOF
             [Unit]
             Description=Docker Compose Application Service
@@ -214,8 +180,8 @@ Resources:
             [Service]
             Type=oneshot
             RemainAfterExit=yes
-            WorkingDirectory=/home/admin/application/docker_compose
-            ExecStart=/usr/bin/docker compose -f docker-compose.yml up -d
+            WorkingDirectory=/opt/application/ChatGPT-on-WeChat
+            ExecStart=/usr/bin/docker compose up -d
             ExecStop=/usr/bin/docker compose down
             TimeoutStartSec=0
 
@@ -223,32 +189,27 @@ Resources:
             WantedBy=multi-user.target
             EOF
 
-            cat > config.yaml <<EOF
+            cat > /opt/application/ChatGPT-on-WeChat/config.yaml <<EOF
             openaiApiKey: "${OpenaiApiKey}"
             openaiOrganizationID: "${OpenaiOrganizationID}"
             chatgptTriggerKeyword: "${ChatgptTriggerKeyword}"
             EOF
+
             systemctl start docker-compose-app
             sleep 10
-            
-
-            ARGUS_VERSION=3.5.7 /bin/bash -c "$(curl -sS https://cms-agent-${RegionId}.oss-${RegionId}-internal.aliyuncs.com/Argus/agent_install_ecs-1.7.sh)" >> /root/install_cms_agent.log 2>&1
           - RegionId:
               Ref: ALIYUN::Region
 Outputs:
-  ServerAddress:
-    Description:
-      en: ServerAddress.
-      zh-cn: 访问页面。
-    Value:
-      Fn::Sub:
-        - 'http://${ServerAddress}:80'
-        - ServerAddress:
-            Fn::Select:
-            - 0
-            - Fn::GetAtt:
-              - InstanceGroup
-              - PublicIps
+  AppLocation:
+    Label:
+      en: Application location
+      zh-cn: 应用位置
+    Value: /opt/application/ChatGPT-on-WeChat
+  GuideZh:
+    Label:
+      en: How to use
+      zh-cn: 如何使用
+    Value: '从服务实例->资源页找到ECS实例，点击远程连接登录ECS实例，运行"sudo docker compose logs -f /opt/application/docker-compose.yml"，使用微信扫描日志中的二维码登录桌面微信，稍等片刻即可开始和机器人聊天。Find ECS Instance in Service Instance->Resource page, click Remote Connect to login ECS instance, run "sudo docker compose logs -f /opt/application/docker-compose.yml", use WeChat scan the QR code to login desktop WeChat, wait a while and you can start chatting with the bot.'
 Metadata:
   ALIYUN::ROS::Interface:
     ParameterGroups:
